[cs-ui] CSToast - fixed font override and increased z-index

--- a/cs-ui-components/src/sass/components/_cs-toast.scss
+++ b/cs-ui-components/src/sass/components/_cs-toast.scss
@@ -10,7 +10,6 @@
 		border-radius: 0.25rem;
 		padding: 0.75rem 3rem 0.75rem 1.5rem;
 		min-width: 15rem;
-		font-family: $font-primary !important;
 
 		> .cs-icon {
 			width: 1.5rem;
@@ -87,11 +86,13 @@
 			padding-top: 0.125rem;
 			display: flex;
 			flex-direction: column;
+			font-family: $font-primary !important;
 
 			.cs-toast-detail {
 				margin: 0;
 				padding: 0;
 				font-size: 0.8125rem;
+				font-family: $font-primary !important;
 			}
 		}
 
