--- a/cs-ui-components/src/sass/settings/_z-index.scss
+++ b/cs-ui-components/src/sass/settings/_z-index.scss
@@ -11,8 +11,8 @@
 	--z-index-path: 10;
 	--z-index-reset-zen-more-tabs-ul: 99;
 	--z-index-lookup-dropdown: 100;
-	--z-index-toast: 1000;
 	--z-index-modal: 9000;
+	--z-index-toast: 9005;
 	--z-index-tooltip: 9025;
 	--z-index-spinner-wrapper: 9050;
 	--z-index-spinner: 9051;
